GRAD2-3550 - sonar fixes